@@ -5,6 +5,7 @@ import java.awt.Color;
 import java.awt.Dimension;
 import java.awt.GridLayout;
 import java.awt.event.ActionListener;
+import java.util.List;
 
 import javax.swing.ImageIcon;
 import javax.swing.JButton;
@@ -12,8 +13,7 @@ import javax.swing.JLabel;
 import javax.swing.JOptionPane;
 import javax.swing.JPanel;
 import javax.swing.border.BevelBorder;
-
-import com.google.common.collect.ImmutableList;
+import javax.swing.border.EmptyBorder;
 
 public class ApprovalListItem extends JPanel {
     private JPanel leftPanel;
@@ -24,7 +24,7 @@ public class ApprovalListItem extends JPanel {
     private ActionListener approveListener;
     private ActionListener rejectListener;
     private ApprovalList parentList;
-    
+
     private String startDate = "";
     private String endDate = "";
     private String ename = "";
@@ -46,7 +46,7 @@ public class ApprovalListItem extends JPanel {
         return empno;
     }
 
-    public ApprovalListItem(String startDate, String endDate, String empno, String ename) {
+    public ApprovalListItem(String startDate, String endDate, String empno, String ename, String accepted, String mgr) {
         super(new BorderLayout());
         this.startDate = startDate;
         this.endDate = endDate;
@@ -54,7 +54,11 @@ public class ApprovalListItem extends JPanel {
         this.ename = ename;
 
         initListeners();
-        initUI();
+        initUI(accepted, mgr);
+    }
+
+    public ApprovalListItem(String startDate, String endDate, String empno, String ename) {
+        this(startDate, endDate, empno, ename, null, null);
     }
 
     private void initListeners() {
@@ -65,34 +69,51 @@ public class ApprovalListItem extends JPanel {
             }
         };
         rejectListener = e -> {
-            int response = JOptionPane.showConfirmDialog(parentList, "반려하시겠습니까?", "확인", JOptionPane.YES_NO_OPTION, JOptionPane.WARNING_MESSAGE);
+            int response = JOptionPane.showConfirmDialog(parentList, "반려하시겠습니까?", "확인", JOptionPane.YES_NO_OPTION,
+                    JOptionPane.WARNING_MESSAGE);
             if (response == JOptionPane.YES_OPTION) {
                 parentList.reject(this);
             }
         };
     }
 
-    private void initUI() {
+    private void initUI(String accepted, String mgr) {
         leftPanel = new JPanel(new BorderLayout());
         leftPanel.add(new JLabel(new ImageIcon("res/beach.png")));
         add(leftPanel, BorderLayout.WEST);
 
         contentPanel = new JPanel(new GridLayout(2, 1));
         contentPanel.add(new JLabel("휴가신청: %s ~ %s".formatted(startDate, endDate)));
-        contentPanel.add(new JLabel("기안자: " + ename));
+        if (mgr == null) {
+            contentPanel.add(new JLabel("기안자: " + ename));
+        } else {
+            contentPanel.add(new JLabel("결재자: " + mgr));
+        }
         add(contentPanel);
 
         rightPanel = new JPanel(new GridLayout(1, 2));
         approveButton = new JButton(new ImageIcon("res/check.png"));
-        approveButton.addActionListener(approveListener);
-        rejectButton = new JButton(new ImageIcon("res/close.png"));
-        rejectButton.addActionListener(rejectListener);
-        ImmutableList.of(approveButton, rejectButton).forEach(btn -> {
-            btn.setPreferredSize(new Dimension(50, 50));
-            btn.setBackground(Color.WHITE);
-            btn.setBorder(new BevelBorder(BevelBorder.RAISED));
-            rightPanel.add(btn);
-        });
+        if (accepted == null) {
+            approveButton.addActionListener(approveListener);
+            rejectButton = new JButton(new ImageIcon("res/close.png"));
+            rejectButton.addActionListener(rejectListener);
+            List.of(approveButton, rejectButton).forEach(btn -> {
+                btn.setPreferredSize(new Dimension(50, 50));
+                btn.setBackground(Color.WHITE);
+                btn.setBorder(new BevelBorder(BevelBorder.RAISED));
+                rightPanel.add(btn);
+            });
+        } else {
+            approveButton.setBorder(new EmptyBorder(0, 0, 0, 8));
+            approveButton.setEnabled(false);
+            if (accepted.equals("N")) {
+                approveButton.setIcon(new ImageIcon("res/schedule.png"));
+            } else {
+                approveButton.setDisabledIcon(new ImageIcon("res/check.png"));
+            }
+            rightPanel.add(approveButton);
+        }
+        
 
         add(rightPanel, BorderLayout.EAST);
     }
